full-moon/tests/lua52_cases/fail/parser/goto-as-identifier/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/lua52_cases/fail/parser/goto-as-identifier
---
error[ast]: expected identifier after `.`
  ┌─ source.lua:2:5
  │
2 │ self.goto("foo")
  │     ^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:2:6
  │
2 │ self.goto("foo")
  │      ^^^^

error[ast]: expected label name after `goto`
  ┌─ source.lua:2:6
  │
2 │ self.goto("foo")
  │      ^^^^^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:2:17
  │
2 │ self.goto("foo")
  │                 ^


